--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   google_fonts: ^3.0.1
   get: ^4.6.5
   webview_flutter: ^3.0.4
+  country_picker: ^2.0.16
+  emoji_flag_converter: ^1.1.0
 
 
 dev_dependencies:
