--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   webview_flutter: ^3.0.4
   country_picker: ^2.0.16
   emoji_flag_converter: ^1.1.0
+  flutter_zoom_drawer: ^3.0.3
 
 
 dev_dependencies:
