drawer is full funcitonal

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.online_news_app">
    <application
-        android:label="online_news_app"
+        android:label="Global News"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
