--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   firebase_auth: ^4.2.10
   firebase_core: ^2.7.1
   flutter_secure_storage: ^6.0.0
+  animated_splash_screen: ^1.3.0
 
 
 dev_dependencies:
