--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,16 +5,7 @@ description: A new Flutter project.
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
+
 version: 1.0.0+1
 
 environment:
@@ -34,27 +25,34 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  dio: ^4.0.6
-  infinite_scroll_pagination: ^3.2.0
-  cached_network_image: ^3.2.2
-  google_fonts: ^3.0.1
-  get: ^4.6.5
-  webview_flutter: ^3.0.4
-  country_picker: ^2.0.16
+
+  #UI & design
+  google_fonts: ^6.3.1
+  infinite_scroll_pagination: ^5.1.1
   emoji_flag_converter: ^1.1.0
-  flutter_zoom_drawer: ^3.0.3
-  share_plus: ^4.4.0
-  rename: ^2.1.1
+  flutter_zoom_drawer: ^3.2.0
   rating_dialog: ^2.0.4
-  store_redirect: ^2.0.1
-  flutter_mailer: ^2.0.1
-  flutter_form_builder: ^7.7.0
-  form_builder_validators: ^8.3.0
-  form_validator: ^1.0.2
-  firebase_auth: ^4.2.10
-  firebase_core: ^2.7.1
-  flutter_secure_storage: ^6.0.0
+  flutter_form_builder: ^10.2.0
+  form_builder_validators: ^11.2.0
+  form_validator: ^2.1.1
   animated_splash_screen: ^1.3.0
+
+  #network & backend
+  dio: ^5.9.0
+  firebase_auth: ^6.0.1
+  firebase_core: ^4.0.0
+
+  #Utils
+  cached_network_image: ^3.4.1
+  country_picker: ^2.0.27
+  webview_flutter: ^4.13.0
+  share_plus: ^11.1.0
+  store_redirect: ^2.0.4
+  flutter_mailer: ^3.0.1
+  flutter_secure_storage: ^9.2.4
+
+  #state management
+  get: ^4.7.2
 
 
 dev_dependencies:
