update gradle, apk level

--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,11 +1,38 @@
-include ':app'
+// android/settings.gradle
 
-def localPropertiesFile = new File(rootProject.projectDir, "local.properties")
-def properties = new Properties()
+pluginManagement {
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+    }
 
-assert localPropertiesFile.exists()
-localPropertiesFile.withReader("UTF-8") { reader -> properties.load(reader) }
+    def localPropertiesFile = new File(rootDir, "local.properties")
+    def properties = new Properties()
+    assert localPropertiesFile.exists()
+    localPropertiesFile.withReader("UTF-8") { reader -> properties.load(reader) }
+    def flutterSdkPath = properties.getProperty("flutter.sdk")
+    assert flutterSdkPath != null : "flutter.sdk not set in local.properties"
+    includeBuild("$flutterSdkPath/packages/flutter_tools/gradle")
+}
 
-def flutterSdkPath = properties.getProperty("flutter.sdk")
-assert flutterSdkPath != null, "flutter.sdk not set in local.properties"
-apply from: "$flutterSdkPath/packages/flutter_tools/gradle/app_plugin_loader.gradle"
+plugins {
+    id "dev.flutter.flutter-plugin-loader" version "1.0.0"
+    id "com.android.application" version "8.6.1" apply false
+    id "org.jetbrains.kotlin.android" version "2.0.21" apply false // safer with AGP 8.6.x
+    id "com.google.gms.google-services" version "4.4.1" apply false
+}
+
+dependencyResolutionManagement {
+    // keep this line if you want settings.gradle to own repos
+    repositoriesMode.set(RepositoriesMode.PREFER_SETTINGS)
+
+    repositories {
+        google()
+        mavenCentral()
+        // IMPORTANT: Flutter engine artifacts
+        maven { url = uri("https://storage.googleapis.com/download.flutter.io") }
+    }
+}
+
+include(":app")
